--- a/javascript/projects/randomColor/index.html
+++ b/javascript/projects/randomColor/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Functions</title>
+  <title>Random Color</title>
 </head>
 <body>
-  <!-- <script src="app.js"></script> -->
-  <script src="Exercises.js"></script>
+  <h1>Welcome</h1>
+  <button>Clicke Me</button>
+
+  <script src="app.js"></script>
 </body>
 </html>
